k8s/apps/pi-web/service.yaml
---
# Selectorless service pointing to pi-web on the desktop (ammars-pc)
apiVersion: v1
kind: Service
metadata:
  name: pi-web-external
  namespace: pi-web
spec:
  ports:
    - name: http
      port: 31415
      targetPort: 31415
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pi-web-external
  namespace: pi-web
  labels:
    kubernetes.io/service-name: pi-web-external
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 31415
endpoints:
  - addresses:
      - 192.168.1.50
